# university-work

./: README.md
1st year/algebra/Number of Partitions on a Set/: main.py  result.txt
1st year/computer systems architecture/: README.md  ex_1.asm  ex_2.asm  ex_3.asm  ex_4.asm  ex_5.asm  ex_6.asm  ex_7.asm  ex_8.asm  ex_9.asm
1st year/data structures & algorithms/DLLA on ADT Indexed List/: App.cpp  ExtendedTest.cpp  ListIterator.cpp
1st year/data structures & algorithms/Sparse ADT Matrix/: ExtendedTest.cpp  Matrix.cpp  ShortTest.cpp
1st year/data structures & algorithms/Unique Key SLL MultiMap/MultiMap/: CMakeLists.txt
1st year/data structures & algorithms/Unique Key SLL MultiMap/MultiMap/header files/: MultiMap.h
1st year/data structures & algorithms/Unique Key SLL MultiMap/MultiMap/source files/: MultiMap.cpp
1st year/dsa/BST ADT Sorted Map/: CMakeLists.txt  ExtendedTest.cpp  SortedMap.h
1st year/dsa/BST ADT Sorted Map/Lecture6_demo/Lecture6_demo/Lecture6_demo_abstract_classes/: Animal.cpp  Animal.h
1st year/dsa/BST ADT Sorted Map/seminar-6/seminar-6/: chatwindow.cpp  chatwindow.h  main.cpp
1st year/dsa/BST on ADT Sorted Map/: App.cpp  SMIterator.cpp  SMIterator.h  ShortTest.cpp  ShortTest.h  SortedMap.cpp
1st year/dsa/BST on ADT Sorted Map/Lecture6_demo/Lecture6_demo/Lecture6_demo_abstract_classes/: CMakeLists.txt  main.cpp
1st year/dsa/BST on ADT Sorted Map/seminar-6/seminar-6/: CMakeLists.txt  ChatSession.h  UserMessage.h  chatwindow.ui  observer.h  subject.h
1st year/dsa/DLLA on ADT Indexed List/: CMakeLists.txt  IndexedList.cpp  IndexedList.h  ListIterator.h  ShortTest.cpp  ShortTest.h
1st year/dsa/HashTable on ADT MultiMap/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  MultiMap.cpp  MultiMap.h  MultiMapIterator.cpp  MultiMapIterator.h  ShortTest.cpp  ShortTest.h
1st year/dsa/Sparse ADT Matrix/: App.cpp  CMakeLists.txt
1st year/dsa/Sparse ADT Matrix/header files/: Matrix.h  ShortTest.h
1st year/dsa/Unique Key SLL on ADT MultiMap/source files/: ExtendedTest.cpp  MultiMapIterator.cpp  ShortTest.cpp
1st year/fundamentals of programming/Achi Game/: README.md
1st year/fundamentals of programming/Code Runners Game/: README.md
1st year/fundamentals of programming/Code Runners Game/c/: README.md
1st year/fundamentals of programming/Code Runners Game/src/: code_runners.py  ui.py
1st year/fundamentals of programming/Movie Rentals Management Program/: README.md
1st year/fundamentals of programming/Movie Rentals Management Program/m/: README.md
1st year/fundamentals of programming/Obstruction Game/: README.md
1st year/fundamentals of programming/Obstruction Game/domain/: point.py
1st year/fundamentals of programming/Obstruction Game/o/: README.md
1st year/fundamentals of programming/Obstruction Game/tests/: test_point.py
1st year/fundamentals of programming/Random Problems/: p3.py
1st year/graph algorithms/Directed Graph Implementation/: graph.py  graph_file  graph_file_2  main.py  operations.py  ui.py
1st year/object oriented programming/: .gitignore
1st year/object oriented programming/Bills Management Program/: CMakeLists.txt
1st year/object oriented programming/Bills Management Program/header files/: bill.h  dynamicArray.h  repo.h  service.h  ui.h
1st year/object oriented programming/Bills Management Program/source files/: bill.cpp  main.cpp  repo.cpp  service.cpp  ui.cpp
1st year/object oriented programming/Dwellings and Clients Management Program/: CMakeLists.txt
1st year/object oriented programming/Medical Analysis Management Program/: CMakeLists.txt  main.cpp
1st year/object oriented programming/Old Buildings Management Program/: CMakeLists.txt  main.cpp
1st year/object oriented programming/Random Problems/: CMakeLists.txt  README.md  oktare.c
1st year/object oriented programming/Rock, Paper, Scissors Game/: main.py
1st year/object oriented programming/T1_Goia_Alexia_mockup/: CMakeLists.txt
1st year/object oriented programming/haha/: CMakeLists.txt  main.cpp
1st year/object oriented programming/lab_9_activity/: CMakeLists.txt  main.cpp
1st year/object oriented programming/seminar5/: CMakeLists.txt  CSVPlaylist.cpp  CSVPlaylist.h  FilePlaylist.h  Repository.cpp  Repository.h  Service.cpp  Service.h  Song.cpp  UI.cpp  UI.h  action.cpp  action.h  main.cpp  songs
1st year/object oriented programming/test2/: CMakeLists.txt
1st year/object oriented programming/untitled/: CMakeLists.txt
1st year/object oriented programming/untitled1/: CMakeLists.txt
1st year/object oriented programming/untitled2/: CMakeLists.txt
1st year/object oriented programming/untitled3/: CMakeLists.txt  main.cpp
1st year/operating systems/: README.md
1st year/operating systems/POSIX Threads Exercises/: README.md  ex_1.c  ex_2.c  ex_4.c  ex_5.c
1st year/operating systems/Shell Exercises/: README.md  ex_1.sh  ex_10.sh  ex_2.sh  ex_3.sh  ex_4.sh  ex_5.sh  ex_6.sh  ex_7.sh  ex_8.sh  ex_9.sh
1st year/operating systems/UNIX Processes & POSIX Threads Exercises/: ex_3.c
2nd year/ai/: README.md  lab10.ipynb  lab12.ipynb  lab2.ipynb  lab3.ipynb  lab8.ipynb
2nd year/apm/Toy Language Interpreter/: logFile1  logFile10  logFile11  logFile12  logFile2  logFile3  logFile4  logFile5  logFile6  logFile7  logFile8  logFile9
2nd year/comp networks/: client_1.py  client_2.py  hangman_client.py  server_2.py  server_3.py
2nd year/databases/: a_lab2.sql  add_views_lab4.sql  b_lab2.sql  c_lab2.sql  createDB.sql  d_lab2.sql  delete_rows_lab4.sql  e_lab2.sql  execute_lab3.sql  execute_lab4.sql  f_lab2.sql  g_lab2.sql  h_lab2.sql  i_lab2.sql  insert_rows_lab4.sql  insert_update_delete.sql  lab5.sql  view_lab4.sql
2nd year/p&s/: lab3.m  practice2.m
2nd year/sdi/sql and csv generator/: main.py  script.py
2nd year/wp/cope_and_seethe_button/: index.html  muie.css
2nd year/wp/css/: riseupmenus.html  style.css  style1.css  verticalgraph.html
2nd year/wp/html/: CumparatiASMR.m4a  ajutor..html  raspunsul.html
2nd year/wp/js/: index.html
2nd year/wp/oracle_clone/: index.html  style.css
(+171 files in other folders)
