cmake_minimum_required(VERSION 3.16)
project(t1_913_Goia_Alexia_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(t1_913_Goia_Alexia_2 "source files/main.cpp" "header files/dynamicArray.h" "header files/bill.h" "header files/repo.h" "source files/repo.cpp" "header files/ui.h" "header files/service.h" "source files/ui.cpp" "source files/bill.cpp" "source files/service.cpp")
